
9.19  2021-05-23

9.18  2021-05-09
  - Remove Font Awesome from distribution.

9.17  2021-04-12
  - Deprecated ?format=* parameter in favor of ?_format=* for content negotiation in Mojolicious::Renderer.

9.16  2021-04-08
  - Added support for format inheritance.
  - Improved Mojo::Server::CGI with support for before_server_start hook.

9.15  2021-03-30
  - Improved form generator in Mojo::UserAgent::Transactor to allow custom Content-Disposition headers.

9.14  2021-03-23
  - Added EXPERIMENTAL support for :text pseudo-class to Mojo::DOM::CSS.

9.13  2021-03-22
  - Improved request_id attribute in Mojo::Message::Request to be a little more unique.
  - Fixed Mojolicious::Plugin::Mount to share the logger of the host application.

9.12  2021-03-21
  - Improved mojo script startup time slightly with a Mojo::HelloWorld optimization.
  - Improved design of built-in templates.

9.11  2021-03-20
  - This release contains fixes for security issues, everybody should upgrade!
  - Disabled format detection by default to fix vulnerabilities in many Mojolicious applications. That means some of
    your routes that previously matched "/foo" and "/foo.json", will only match "/foo" after upgrading. From now on you
    will have to explicitly declare the formats your routes are allowed to handle.
      # /foo
      # /foo.html
      # /foo.json
      $r->get('/foo')->to('bar#yada');
    becomes
      $r->get('/foo' => [format => ['html', 'json']])->to('bar#yada', format => undef);
    And if you are certain that your application is not vulnerable, you also have the option to re-enable format
    detection for a route and all its nested routes. Due to the high risk of vulnerabilities, this feature is going to
    be removed again in a future release however.
      my $active = $r->any([format => 1]);
      $active->get('/foo')->to('Test#first');
      $active->put('/bar')->to('Test#second');
  - Improved built-in templates not to show embedded apps in the stash snapshot.