@@ -101,10 +101,10 @@ information across several HTTP requests.
 Traditionally all session data was stored on the server-side and only session ids were exchanged between browser and
 web server in the form of cookies.
 
-  Set-Cookie: session=hmac-sha1(base64(json($session)))
+  Set-Cookie: session=hmac-sha256(base64(json($session)))
 
 In L<Mojolicious> however we are taking this concept one step further by storing everything JSON serialized and Base64
-encoded in HMAC-SHA1 signed cookies, which is more compatible with the REST philosophy and reduces infrastructure
+encoded in HMAC-SHA256 signed cookies, which is more compatible with the REST philosophy and reduces infrastructure
 requirements.
 
 =head2 Test-Driven Development
@@ -379,7 +379,7 @@ L<Mojolicious/"secrets">.
 
   $app->secrets(['Mojolicious rocks']);
 
-This passphrase is used by the HMAC-SHA1 algorithm to make signed cookies tamper resistant and can be changed at any
+This passphrase is used by the HMAC-SHA256 algorithm to make signed cookies tamper resistant and can be changed at any
 time to invalidate all existing sessions.
 
   $c->session(user => 'sebastian');
@@ -402,7 +402,7 @@ L<Mojolicious::Plugin::DefaultHelpers/"flash">.
   $c->flash(message => 'Everything is fine.');
   $c->redirect_to('goodbye');
 
-Just remember that all session data gets serialized with L<Mojo::JSON> and stored in HMAC-SHA1 signed cookies, which
+Just remember that all session data gets serialized with L<Mojo::JSON> and stored in HMAC-SHA256 signed cookies, which
 usually have a C<4096> byte (4KiB) limit, depending on browser.
 
 =head2 Final prototype
