@@ -80,7 +80,7 @@ Mojolicious::Sessions - Session manager based on signed cookies
 =head1 DESCRIPTION
 
 L<Mojolicious::Sessions> manages sessions based on signed cookies for L<Mojolicious>. All data gets serialized with
-L<Mojo::JSON> and stored Base64 encoded on the client-side, but is protected from unwanted changes with a HMAC-SHA1
+L<Mojo::JSON> and stored Base64 encoded on the client-side, but is protected from unwanted changes with a HMAC-SHA256
 signature.
 
 =head1 ATTRIBUTES
