@@ -1,5 +1,7 @@
 
 9.19  2021-05-23
+  - This release contains fixes for security issues, everybody should upgrade!
+  - Swiched from HMAC SHA1 to HMAC SHA256 for signed cookies. Note that this means that all sessions will be reset.
 
 9.18  2021-05-09
   - Remove Font Awesome from distribution.
